--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "next": "12.2",
+    "next-seo": "^5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.39.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.3",
     "@types/node": "17.0.22",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
