--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@hookform/resolvers": "^2.9.7",
     "graphql": "^16.5.0",
     "next": "12.2",
     "next-mdx-remote": "^4.0.3",
     "next-seo": "^5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.34.0",
     "react-markdown": "^8.0.3",
-    "react-query": "^3.39.1"
+    "react-query": "^3.39.1",
+    "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.11.3",
@@ -26,6 +29,7 @@
     "@graphql-codegen/typescript": "2.7.2",
     "@graphql-codegen/typescript-operations": "2.5.2",
     "@graphql-codegen/typescript-react-apollo": "3.3.2",
+    "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.3",
     "@types/node": "17.0.22",
     "@types/react": "^18.0.14",
