--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@hookform/resolvers": "^2.9.7",
+    "@stripe/stripe-js": "^1.38.1",
     "graphql": "^16.5.0",
     "next": "12.2",
     "next-mdx-remote": "^4.0.3",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.34.0",
     "react-markdown": "^8.0.3",
     "react-query": "^3.39.1",
+    "stripe": "^10.10.0",
     "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
